[svn r7581] copy jacorb to sod.sh as jacorb seems to work well
--HG--
branch : sod